@@ -22,14 +22,13 @@ import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import javax.annotation.Nonnull;
-
 import org.qubership.automation.ss7lib.model.AbstractMessage;
 import org.qubership.automation.ss7lib.parse.MessageParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.Lists;
+import jakarta.annotation.Nonnull;
 
 public abstract class AbstractParser<T extends AbstractMessage> extends StringParser implements Parser<T> {
     private static final Pattern SPACES = Pattern.compile("^\\s+");
@@ -60,13 +59,13 @@ public abstract class AbstractParser<T extends AbstractMessage> extends StringPa
             } else if (level.equals(Level.UP)) {
                 int i = 0;
                 while (i >= 0 && iterator.hasNext()) {
-                    if (parents.size() > 0) {
-                        parents.remove(parents.size() - 1);
+                    if (!parents.isEmpty()) {
+                        parents.removeLast();
                     }
-                    if (parents.size() > 0) {
-                        i = stringLevel(parents.get(parents.size() - 1)) - stringLevel(currentString.get());
+                    if (!parents.isEmpty()) {
+                        i = stringLevel(parents.getLast()) - stringLevel(currentString.get());
                     }
-                    if (parents.size() == 0) {
+                    if (parents.isEmpty()) {
                         break;
                     }
                 }
